# portgraph

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  RELEASES.md  TODO.md  cliff.toml  devenv.nix  release-plz.toml
.github/: dependabot.yml  pre-commit
.github/workflows/: add-to-project.yml  archive-bencher.yml  ci.yml  drop-cache.yml  pr-title.yml  pullrequest.yml  release-plz.yml
bench_data/100/: graph_0.json  graph_1.json  graph_2.json  graph_3.json  graph_4.json  graph_5.json  graph_6.json  graph_7.json  graph_8.json  graph_9.json
bench_data/1000/: graph_0.json  graph_1.json  graph_2.json  graph_3.json  graph_4.json  graph_5.json  graph_6.json  graph_7.json  graph_8.json  graph_9.json
bench_data/10000/: graph_0.json  graph_1.json  graph_2.json  graph_3.json  graph_4.json  graph_5.json  graph_6.json  graph_7.json  graph_8.json  graph_9.json
benches/: bench_main.rs  criterion_benches.rs  iai_benches.rs  portgraph.rs
benches/benchmarks/: convex.rs  generators.rs  hash.rs  hierarchy.rs  mod.rs  portgraph.rs  render.rs  substitute.rs  toposort.rs
benches/helpers/: generators.rs  mod.rs  traits.rs
portgraph/: Cargo.toml  README.md
portgraph-gen/: Cargo.toml
portgraph-gen/src/: builder.rs  exhaustive.rs  generator.rs  main.rs  random.rs
portgraph-gen/src/snapshots/: portgraph_gen__exhaustive__tests__generate_layers.snap  portgraph_gen__exhaustive__tests__generate_layers_2.snap  portgraph_gen__exhaustive__tests__small_exhaustive_generation.snap
portgraph-hash/: Cargo.toml
portgraph-hash/src/: main.rs
portgraph-hierarchy/: Cargo.toml
portgraph-hierarchy/benches/: bench_main.rs
portgraph-hierarchy/benches/benchmarks/: generators.rs  hierarchy.rs  mod.rs
portgraph-hierarchy/src/: dot.rs  hierarchy.rs  lib.rs
portgraph/benches/: bench_main.rs
portgraph/benches/benchmarks/: generators.rs  substitute.rs
portgraph/src/: dot.rs  lib.rs  multiportgraph.rs  portgraph.rs  py_graph.rs  secondary.rs  substitute.rs  weights.rs
portgraph/src/algorithms/: dominators.rs
portgraph/src/multiportgraph/: iter.rs
src/: algorithms.rs  boundary.rs  convexity.rs  dot.rs  graph.rs  hash.rs  hierarchy.rs  index.rs  lib.rs  multiportgraph.rs  portgraph.rs  proptest.rs  py_graph.rs  render.rs  secondary.rs  serialize.rs  substitute.rs  toposort.rs  unmanaged.rs  unweighted.rs  view.rs  weights.rs
src/algorithms/: boundary.rs  convex.rs  dominators.rs  dynamic.rs  lca.rs  mod.rs  post_order.rs  toposort.rs
src/algorithms/convex/: line_convex_checker.rs  topo_convex_checker.rs
src/hash/: acyclic.rs  wfl.rs  wfl_hist.rs  wfl_pool.rs  wfl_sparse.rs
src/index/: impls.rs
src/multiportgraph/: iter.rs
src/portgraph/: iter.rs
src/render/: dot.rs  mermaid.rs
src/snapshots/: portgraph__index__test_serde__serde_node_index.snap  portgraph__render__test__flat__dot.snap  portgraph__render__test__flat__mermaid.snap  portgraph__render__test__hierarchy__dot.snap  portgraph__render__test__hierarchy__mermaid.snap  portgraph__render__test__hierarchy_interregional__dot.snap  portgraph__render__test__hierarchy_interregional__mermaid.snap  portgraph__render__test__region_view__mermaid.snap  portgraph__render__test__weighted__dot.snap  portgraph__render__test__weighted__mermaid.snap
src/view/: filter.rs  flat_region.rs  petgraph.rs  refs.rs  region.rs  subgraph.rs
