[package]
name = "portgraph"
version = "0.2.0"
license = "Apache-2.0"

readme = "README.md"
documentation = "https://docs.rs/portgraph/"
repository = "https://github.com/CQCL/portgraph"

description = "Data structure library for directed graphs with first-level ports."
keywords = ["data-structure", "graph"]
categories = ["data-structures"]

edition = "2021"
rust-version = "1.68"

[lib]
bench = false
name = "portgraph"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0.28"
pyo3 = { version = "0.18.1", optional = true, features = [
    "multiple-pymethods",
] }
bitvec = "1.0.1"
serde = { version = "1.0.152", features = ["derive"], optional = true}

[features]
pyo3 = ["dep:pyo3"]
serde = ["dep:serde"]

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
proptest = "1.1.0"
rstest = "0.16.0"

[[bench]]
name = "portgraph"
harness = false
