[package]
name = "portgraph"
version = "0.6.0"
license = "Apache-2.0"

readme = "README.md"
documentation = "https://docs.rs/portgraph/"
repository = "https://github.com/CQCL/portgraph"

description = "Data structure library for directed graphs with first-level ports."
keywords = ["data-structure", "graph"]
categories = ["data-structures"]

edition = "2021"
rust-version = "1.69"

[lib]
bench = false
name = "portgraph"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0.28"
pyo3 = { version = "0.19", optional = true, features = [
    "multiple-pymethods",
] }
bitvec = "1.0.1"
serde = { version = "1.0.152", features = ["derive"], optional = true}
proptest = { version = "1.1.0", optional = true }
rand = { version = "0.8.5", optional = true }
petgraph = { version = "0.6.3", optional = true }
delegate = "0.9.0"
context-iterators = "0.1.0"

[features]
pyo3 = ["dep:pyo3"]
serde = ["dep:serde", "bitvec/serde"]
proptest = ["dep:proptest", "dep:rand"]
petgraph = ["dep:petgraph"]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rmp-serde = "1.1.1"
rstest = "0.17.0"
itertools = "0.11.0"

[[bench]]
name = "bench_main"
harness = false
