[package]
name = "portgraph"
version = "0.14.1"
license = "Apache-2.0"

readme = "README.md"
documentation = "https://docs.rs/portgraph/"
repository = "https://github.com/CQCL/portgraph"

description = "Data structure library for directed graphs with first-level ports."
keywords = ["data-structure", "graph"]
categories = ["data-structures"]

edition = "2021"
rust-version = "1.75"

[lib]
bench = false
name = "portgraph"
path = "src/lib.rs"

[dependencies]
thiserror = "2.0.12"
bitvec = "1.0.1"
serde = { version = "1.0.219", features = ["derive"], optional = true }
proptest = { version = "1.6.0", optional = true }
rand = { version = "0.9.1", optional = true }
petgraph = { version = "0.8.1", optional = true }
delegate = "0.13.3"
itertools = "0.14.0"
# There can only be one `pyo3` dependency in the whole workspace, so we use a
# loose version constraint to prevent breaking changes in dependent crates where possible.
pyo3 = { version = ">= 0.23, < 0.26", optional = true, features = [
    "multiple-pymethods",
] }

[features]
pyo3 = ["dep:pyo3"]
serde = ["dep:serde", "bitvec/serde"]
proptest = ["dep:proptest", "dep:rand"]
petgraph = ["dep:petgraph"]

[dev-dependencies]
criterion = { version = ">= 0.5.1, < 0.7.0", features = ["html_reports"] }
iai-callgrind = "0.15.2"
rmp-serde = "1.1.1"
rstest = "0.25.0"
itertools = "0.14.0"
insta = "1.43.0"

[[bench]]
name = "criterion_benches"
harness = false

[[bench]]
name = "iai_benches"
harness = false

[profile.bench]
debug = true
