[package]
name = "portgraph-gen"
version = "0.1.0"
edition = "2021"
description = "Binary for generating random acyclic portgraphs"

[[bin]]
name = "portgraph-gen"
path = "src/main.rs"

[dependencies]
portgraph = { path = "..", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
insta = "1.34"
