[package]
name = "portgraph-hash"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
portgraph = { path = "..", features = ["serde", "petgraph"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
fxhash = "0.2.1"
